2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/lzopio.c (read_block_header): Fix incorrect byte swapping
	(test_header): Likewise.

2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix --help formatting.

	* util/grub-mkconfig_lib.in (print_option_help): New function.
	(grub_fmt): Likewise.
	* util/grub-install.in: Use print_option_help and grub_fmt.
	* util/grub-kbdcomp.in: Likewise.
	* util/grub-mkconfig.in: Likewise.
	* util/grub-mknetdir.in: Likewise.
	* util/grub-mkrescue.in: Likewise.
	* util/grub-mkstandalone.in: Likewise.
	* util/grub-reboot.in: Likewise.
	* util/grub-set-default.in: Likewise.
	* util/powerpc/ieee1275/grub-mkrescue.in: Likewise.

2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>

	* linguas.sh: Remove autogenerated *.po.

2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/README: Move language fetcing to ...
	* linguas.sh: ... here.
	* po/README: Point to linguas.sh.

2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/README: Exclude ko.po due to disclaimer problems.

2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gettext/gettext.c (grub_gettext_pread): Fix the case when
	len = 0.
	(grub_gettext_translate_real): Handle 0th string.
	(grub_gettext_translate): Ensure that "" isn't translated.

2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Add
	TRANSLATORS comment.
	(grub_diskfilter_print_partmap): Propagate changing of error into
	warning.

2012-04-04  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/diskfilter.h (grub_diskfilter_vg): Increase extent_size
	to uint64_t to prevent overflow.
	(grub_diskfilter_lv): Increase start_extent and extent_count
	to uint64_t to prevent overflow.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Increase version.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Introduce en@cyrillic en@hebrew en@arabic and en@greek.
