@@ -1,5 +1,9 @@
 2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/lib/adler32.c: Recode due to license unclearness.
+
+2012-04-07  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/io/lzopio.c (read_block_header): Fix incorrect byte swapping
 	(test_header): Likewise.
 
